KTS-1589 "Enabling and adding text to the disclaimer script for the login window seems to break the layout. " Fixed.
Reviewed By: Kevin

git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@6510 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-login.css
+++ b/resources/css/kt-login.css
@@ -21,7 +21,6 @@
             margin-right: auto;
             text-align: left;
             background: white url(../graphics/ktbg.png) bottom left no-repeat;
-            /*-moz-border-radius: 1em;*/
         }
 
 		#loginbox_skin {
@@ -54,6 +53,15 @@
         }
 
         #loginbox.hasDisclaimer #loginboxTopMiddle {
+            position: absolute;
+            background: url(../graphics/login_border_repeat.png) top left repeat-x;
+            top:0;
+            left:35px;
+            width: 520px;
+            height: 3px; 
+        }
+        
+        #loginbox_skin.hasDisclaimer #loginboxTopMiddle {
             position: absolute;
             background: url(../graphics/login_border_repeat.png) top left repeat-x;
             top:0;
@@ -97,6 +105,15 @@
             width: 520px;
             height: 3px;
         }
+        
+        #loginbox_skin.hasDisclaimer #loginboxBottomMiddle {
+            position: absolute;
+            background: url(../graphics/login_border_bottom.png) bottom left repeat-x;
+            bottom: 0;
+            left: 35px;
+            width: 520px;
+            height: 3px;
+        }
 
         #loginboxBottomRight {
             position: absolute;
@@ -120,6 +137,10 @@
             height: 200px;
         }
         
+        #loginbox_skin.hasDisclaimer #loginboxLeftTop {
+            height: 200px;
+        }
+        
         #loginboxLeftBottom {
             position: absolute;
             background: url(../graphics/login_border_repeat.png) top left repeat-y;
@@ -130,7 +151,11 @@
         }
 
         #loginbox.hasDisclaimer #loginboxLeftBottom {
-            height: 200px;
+            height: 250px;
+        }
+        
+        #loginbox_skin.hasDisclaimer #loginboxLeftBottom {
+            height: 250px;
         }
 
         #loginboxRightTop {
@@ -143,7 +168,11 @@
         }
 
         #loginbox.hasDisclaimer #loginboxRightTop {
-            height: 200px;
+            height: 250px;
+        }
+        
+        #loginbox_skin.hasDisclaimer #loginboxRightTop {
+            height: 250px;
         }
 
         #loginboxRightBottom {
@@ -158,8 +187,17 @@
         #loginbox.hasDisclaimer #loginboxRightBottom {
             height: 200px;
         }
+        
+        #loginbox_skin.hasDisclaimer #loginboxRightBottom {
+            height: 200px;
+        }
 
         #loginbox.hasDisclaimer {
+            background: white url(../graphics/ktbg.png) bottom left repeat-x;
+            width: 564px;
+        }
+        
+        #loginbox_skin.hasDisclaimer {
             background: white url(../graphics/ktbg.png) bottom left repeat-x;
             width: 564px;
         }
@@ -171,6 +209,11 @@
         }
 
         #loginbox.hasDisclaimer #formbox { 
+            padding-right: 20px;
+            border-right: 1px solid #eee;
+        }
+        
+        #loginbox_skin.hasDisclaimer #formbox { 
             padding-right: 20px;
             border-right: 1px solid #eee;
         }
